--- a/src/App.css
+++ b/src/App.css
@@ -2,26 +2,27 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header-cities {
+  height: 5em;
+  margin: 1em;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
 }
 
-.App-link {
-  color: #61dafb;
+.current-city-date {
+  display: flex;
+  justify-content: center;
 }
+
+.current-cities-date p {
+  padding: 15px;
+}
+
+.temp {
+  font-size: 8em;
+  margin-top: -10px;
+}
+
 
 @keyframes App-logo-spin {
   from {
